--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
     "axios": "^0.20.0",
+    "js-cookie": "^2.2.1",
     "nuxt": "^2.14.0"
   },
   "devDependencies": {}
