--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
     "axios": "^0.20.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "js-cookie": "^2.2.1",
     "nuxt": "^2.14.0"
   },
